--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,11 @@ a {
 ul {
   list-style: none;
 }
+
+.container {
+  max-width: 1200px;
+  width: 85%;
+  margin: 35px auto;
+  padding: 20px;
+  position: relative;
+}
